--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,7 +36,7 @@ jobs:
             sudo add-apt-repository ppa:ubuntu-toolchain-r/test
           fi
           sudo apt-get update
-          sudo apt-get install -y clang-${{ matrix.version }} clangd-${{ matrix.version }} clang-tidy-${{ matrix.version }} clang-format-${{ matrix.version }} clang-tools-${{ matrix.version }} llvm-${{ matrix.version }}-dev lld-${{ matrix.version }} lldb-${{ matrix.version }} llvm-${{ matrix.version }}-tools libomp-${{ matrix.version }}-dev libc++-${{ matrix.version }}-dev libc++abi-${{ matrix.version }}-dev libclang-common-${{ matrix.version }}-dev libclang-${{ matrix.version }}-dev libclang-cpp${{ matrix.version }}-dev libpolly-${{ matrix.version }}-dev
+          sudo apt-get install -y clang-${{ matrix.version }} clangd-${{ matrix.version }} clang-tidy-${{ matrix.version }} clang-format-${{ matrix.version }} clang-tools-${{ matrix.version }} llvm-${{ matrix.version }}-dev lld-${{ matrix.version }} lldb-${{ matrix.version }} llvm-${{ matrix.version }}-tools libomp-${{ matrix.version }}-dev libc++-${{ matrix.version }}-dev libc++abi-${{ matrix.version }}-dev libclang-common-${{ matrix.version }}-dev libclang-${{ matrix.version }}-dev libclang-cpp${{ matrix.version }}-dev
           if test ${{ matrix.version }} -gt 11; then
             sudo apt-get install -y libunwind-${{ matrix.version }}-dev
           fi
@@ -45,6 +45,10 @@ jobs:
           if test ${{ matrix.version }} -gt 13; then
             sudo apt-get install -y mlir-${{ matrix.version }}-tools libmlir-${{ matrix.version }}-dev
           fi
+          # Exists only after LLVM 15
+          if test ${{ matrix.version }} -gt 14; then
+            sudo apt-get install -y libpolly-${{ matrix.version }}-dev
+         fi
       - name: Run the testsuite
         shell: bash
         run: |
