Don't run scheduled CI in forks

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    if: github.repository == 'opencollab/llvm-toolchain-integration-test-suite'
     strategy:
       fail-fast: false
       matrix:
