--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04]
-        version: [10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]
+        version: [16, 17, 18, 19, 20, 21]
     steps:
       - uses: actions/checkout@v2
 
