Add ENABLE_GOLD_TESTS that allows to disable tests that rely on the gold linker

--- a/tests/lit.site.cfg.in
+++ b/tests/lit.site.cfg.in
@@ -59,6 +59,7 @@ enable_feature("libc++", "@ENABLE_LIBCXX@")
 enable_feature("static-libc++", "@ENABLE_STATIC_LIBCXX@")
 enable_feature("libunwind", "@ENABLE_LIBUNWIND@")
 enable_feature("support_hwasan", "@ENABLE_HWASAN@")
+enable_feature("gold", "@ENABLE_GOLD_TESTS@")
 
 def getLLVMMajorVersion():
     out = subprocess.run(["llvm-config", "--version"], capture_output=True)
