Enable unwind.cpp on s390x
Starting with LLVM 22, this test succeeds on s390x.
The test is automatically ignored on older LLVM versions that do not
provide libunwind.

LLVM 20 and older do build libunwind on s390x, requiring a test to
guarantee the test is ignored.

--- a/tests/lit.site.cfg.in
+++ b/tests/lit.site.cfg.in
@@ -73,3 +73,8 @@ def getLLVMMajorVersion():
 
 if "s390x" == "@CMAKE_HOST_SYSTEM_PROCESSOR@" and getLLVMMajorVersion() < 21:
    config.available_features.add("availability-compiler-rt-builtins-missing")
+
+# This is necessary because LLVM 20 and earlier versions do build libunwind
+# on s390x even though the library is broken.
+if "s390x" == "@CMAKE_HOST_SYSTEM_PROCESSOR@" and getLLVMMajorVersion() < 22:
+   config.available_features.add("availability-libunwind-missing")
